--- a/index.html
+++ b/index.html
@@ -1,48 +1,153 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
 </head>
-<body>
-    <script type="text/javascript">
-        let punto = 0
-        let risposta = prompt("Qual è la capitale degli Stati Uniti?")
-        while (risposta === null){
-            prompt("Qual è la capitale degli Stati Uniti?")
+
+<body id="body" class="coloresf1">
+    <div class="body">
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <div class="centro">
+                        <h1 style="font-size: 50px;">
+                            <strong>
+                                INDOVINA IL NUMERO
+                            </strong>
+                        </h1>
+                    </div>
+                    <ol>
+                        <li>
+                            Il computer sceglierà segretamente un numero intero casuale tra 1 e 100.
+                        </li>
+                        <li>
+                            Il tuo obiettivo è indovinare questo numero segreto nel minor numero di tentativi possibile.
+                        </li>
+                        <li>
+                            Ad ogni tentativo, inserisci un numero e il computer ti darà un indizio:
+                        </li>
+                    </ol>
+                    <ul>
+                        <li>
+                            Se il tuo numero è troppo basso, ti dirà "Troppo basso, prova un numero più alto!"
+                        </li>
+                        <li>
+                            Se il tuo numero è troppo alto, ti dirà "Troppo alto, prova un numero più basso!"
+                        </li>
+                        <li>
+                            Se indovini il numero esatto, vincerai la partita!
+                        </li>
+                    </ul>
+                    <ol>
+                        <li>
+                            Continua a fare tentativi finché non indovini il numero magico.
+                        </li>
+                        <li>
+                            Alla fine del gioco, ti verrà mostrato il numero di tentativi che hai impiegato per
+                            indovinare.
+                        </li>
+                        <li>
+                            Sfida te stesso a indovinare il numero con il minor numero di tentativi possibile!
+                        </li>
+                    </ol>
+                </div>
+                <div class="col-3"></div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row justify-content-start">
+                    <div class="col-4"></div>
+                    <div class="col-4">
+                        <div class="centro">
+                            <p>
+                                Inserisci il numero magico
+                            </p>
+
+
+                            <form>
+                                <input type="number" max="100" min="1" id="n"> <br>
+                                <input type="button" value="INDOVINA" id="b">
+                            </form>
+                            <div id="message"></div>
+                        </div>
+                    </div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+
+    <script>
+        function generateRandomInteger(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
         }
-        if (risposta.toLowerCase() === "washington"){
-            punto = punto +1
-        }
-        let risposta2 = prompt("Qual è il pianeta più vicino al Sole?")
-        while (risposta2 === null){
-            prompt("Qual è il pianeta più vicino al Sole?")
-        }
-        if (risposta2.toLowerCase() === "mercurio"){
-            punto = punto +1
-        }
-        let risposta3 = prompt("Chi ha scritto La Divina Commedia?")
-        while (risposta3 === null){
-            prompt("Chi ha scritto La Divina Commedia")
-        }
-        if (risposta3.toLowerCase() === "dante"){
-            punto = punto +1
-        }
-        let risposta4 = prompt("Qual è l'oceano più grande del mondo?")
-        while (risposta4 === null){
-            prompt("Qual è l'oceano più grande del mondo?")
-        }
-        if (risposta4.toLowerCase() === "pacifico"){
-            punto = punto +1
-        }
-        let risposta5 = prompt("Quale frutto è noto per tenere lontano il medico se ne mangi uno al giorno?")
-        while (risposta5 === null){
-            prompt("Quale frutto è noto per tenere lontano il medico se ne mangi uno al giorno?")
-        }
-        if (risposta5.toLowerCase() === "mela"){
-            punto = punto +1
-        }
-        alert("Hai totalizzato "+punto)
+
+        let body = document.querySelector("#body");
+        let randomNumber = generateRandomInteger(1, 100);
+        let tentativi = 5;
+        let button = document.querySelector("#b");
+        let number = document.querySelector("#n");
+        let message = document.querySelector("#message");
+
+        button.addEventListener('click', function () {
+            if (tentativi === 0) {
+                message.textContent = "Hai esaurito i tentativi. Il numero corretto era: " + randomNumber;
+                return;
+            }
+
+            const indovina = parseInt(number.value);
+            tentativi = tentativi - 1;
+
+            if (isNaN(indovina) || indovina < 1 || indovina > 100) {
+                message.textContent = "Per favore, inserisci un numero tra 1 e 100.";
+                tentativi = tentativi + 1;
+                return;
+            }
+
+            if (indovina === randomNumber) {
+                message.textContent = "Hai indovinato il numero corretto!";
+                tentativi = 0;
+            } else if (indovina < randomNumber) {
+                message.textContent = "Hai inserito un numero minore. Hai ancora " + tentativi + " tentativi.";
+            } else {
+                message.textContent = "Hai inserito un numero maggiore. Hai ancora " + tentativi + " tentativi.";
+            }
+
+            if (tentativi === 3) {
+                body.classList.remove("coloresf1");
+                body.classList.add("coloresf2");
+            } else {
+                if (tentativi === 2) {
+                    body.classList.remove("coloresf2");
+                    body.classList.add("coloresf3");
+                } else {
+                    if (tentativi === 1) {
+                        body.classList.remove("coloresf3");
+                        body.classList.add("coloresf4");
+                    } else {
+                        if (tentativi === 0) {
+                            body.classList.remove("coloresf4");
+                            body.classList.add("coloresf5");
+                        }
+                    }
+                }
+            }
+        });
     </script>
 </body>
 
